# mcp-client

./: .env  README.md  client.py  main.py  pyproject.toml  requirements.txt
llm/: anthropic_client.py  base.py  factory.py  gemini_client.py
mcp_client_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
